# generate-dockerignore-from-gitignore

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README.txt  generate_dockerignore.py  pyproject.toml  test.py
.github/workflows/: pre-commit.yml
requirements/: dev.in  dev.txt  test.txt
src/: generate_dockerignore.py
test/: test.py
test/cases/02_recursive_match/expected_repo_files/: -dockerignore
test_cases/: .gitignore
test_cases/03_local_git_info_exclude/expected_repo_files/: -dockerignore
test_cases/04_global_git_excludesfile_xdg/: expected_output
test_cases/04_global_git_excludesfile_xdg/expected_repo_files/: -dockerignore
